[src/settings/contextmenu/contextmenusettingspage] Fix Crash because of nullptr

BUG: 437539